--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
 <body>
     <div id="main">
-        <div class="navBar">
-            <h1>Instagram Post</h1>
-        </div>
         <div class="cardPost">
-            <div class="text">
-                <p class="postNumber"> Primer Post </p>
-                <!-- <p class="page">1/12</p> -->
+            <div class="top">
+                <i class="fa-brands fa-instagram fa-2x"></i>
+                <!-- <p class="user"> Instagram</p> -->
+                <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
+                
             </div>
             <img class="img" src="https://loremflickr.com/320/230" />
             <div class="icons">
@@ -29,53 +28,8 @@
                 <i class="fa-regular fa-paper-plane fa-2x"></i>
                 <i class="fa-regular fa-bookmark fa-2x"></i>
             </div>
-            <div class="comment">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-            </div>
-        </div>
-        <div class="cardPost">
-            <div class="text">
-                <p class="postNumber"> Segundo Post </p>
-                <!-- <p class="page">2/12</p> -->
-            </div>
-            <img class="img" src="https://loremflickr.com/320/210" />
-            <div class="icons">
-                <i class="fa-solid fa-heart fa-2x"></i>
-                <i class="fa-regular fa-comment fa-2x"></i>
-                <i class="fa-regular fa-paper-plane fa-2x"></i>
-                <i class="fa-regular fa-bookmark fa-2x"></i>
-            </div>
-            <div class="comment">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-            </div>
-        </div>
-        <div class="cardPost">
-            <div class="text">
-                <p class="postNumber"> Tercerp Post </p>
-                <!-- <p class="page">3/12</p> -->
-            </div>
-            <img class="img" src="https://loremflickr.com/320/220" />
-            <div class="icons">
-                <i class="fa-solid fa-heart fa-2x"></i>
-                <i class="fa-regular fa-comment fa-2x"></i>
-                <i class="fa-regular fa-paper-plane fa-2x"></i>
-                <i class="fa-regular fa-bookmark fa-2x"></i>
-            </div>
-            <div class="comment">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-            </div>
-        </div>
-        <div class="cardPost">
-            <div class="text">
-                <p class="postNumber"> Cuarto Post </p>
-                <!-- <p class="page">4/12</p> -->
-            </div>
-            <img class="img" src="https://loremflickr.com/320/200" />
-            <div class="icons">
-                <i class="fa-solid fa-heart fa-2x"></i>
-                <i class="fa-regular fa-comment fa-2x"></i>
-                <i class="fa-regular fa-paper-plane fa-2x"></i>
-                <i class="fa-regular fa-bookmark fa-2x"></i>
+            <div class="liked">
+                <p>Liked by <strong>4GeeksAcamdemy</strong>,<strong>html5</strong>,and <strong>10,000 others</strong> </p>
             </div>
             <div class="comment">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
